# OpenFF

./: .gitignore  .gitmodules  CMakeLists.txt  Concepts.md  README.md  TODO
conf/: music.ini  openff.ini
src/: CMakeLists.txt  MainApplication.cpp
src/audio/: Music.cpp  Music.h
src/graphics/: BackgroundBillboard.cpp  BackgroundBillboard.h  DebugBox.cpp  DebugBox.h  MusicVisualiser.cpp  MusicVisualiser.h  Text.cpp  Text.h  TextBox.cpp  TextBox.h  Window.cpp  Window.h
src/graphics/shaders/: BillboardShader.cpp  BillboardShader.frag  BillboardShader.h  BillboardShader.vert  MusicVisualiserShader.cpp  MusicVisualiserShader.frag  MusicVisualiserShader.h  MusicVisualiserShader.vert  TextBoxShader.cpp  TextBoxShader.frag  TextBoxShader.h  TextBoxShader.vert  WindowShader.cpp  WindowShader.frag  WindowShader.h  WindowShader.vert
src/misc/: EnumIterator.h  TerminalOutput.cpp  TerminalOutput.h
src/ui/: AbstractMenu.cpp  AbstractMenu.h  AbstractTextbox.cpp  AbstractTextbox.h  Font.cpp  Font.h  FreeformTextbox.cpp  FreeformTextbox.h  MenuBox.cpp  MenuBox.h  MusicMenu.cpp  MusicMenu.h  Textbox.cpp  Textbox.h
src/utilities/: Configuration.cpp  Configuration.h  InputHandler.cpp  InputHandler.h  RessourceLoader.cpp  RessourceLoader.h
